<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman_gp88_support</name>
  <version>0.1.0</version>
  <description>
    <p>ROS-Industrial support for the Motoman GP88 (and variants).</p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman GP88 series of manipulators.
    </p>
    <p>
      <b>Specifications</b>
    </p>
    <ul>
      <li>GP88 - Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information 
      found in the online documentation files for the robot (GP88_2D.zip
      and GP88_3D.zip from
      https://www.yaskawa.eu.com/en/products/robotics/motoman-robots/productdetail/product/gp88/)
      All urdfs are based on the default motion and joint velocity limits, 
      unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Christian Juelg</author>
  <maintainer email="juelg@fzi.de">Christian Juelg (FZI)</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/motoman_gp88_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
