<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman_hc10_support</name>
  <version>0.1.0</version>
  <description>
    <p>ROS-Industrial support for the Motoman HC10 (and variants).</p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman HC10 manipulators. This currently includes the base model
      and the DT variant.
    </p>
    <p>
      <b>Specifications</b>
    </p>
    <ul>
      <li>HC10 - model 1-06VXHC10-A00</li>
      <li>HC10DT - model 1-06VXHC10-A10</li>
      <li>HC10DT-B10 - model 1-06VXHC10-B10</li>
   </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information 
      found in:
    </p>
    <ul>
      <li><em>YASKAWA MOTOMAN-HC10 INSTRUCTIONS (HW1483896)</em> version
        <em>180571-1CD, rev 2</em>.
      </li>
      <li><em>YASKAWA MOTOMAN-HC10DT INSTRUCTIONS (HW1485083)</em> version
        <em>184672-1CD, rev 2</em>.
      </li>
      <li><em>YASKAWA MOTOMAN-HC10DT INSTRUCTIONS DUST-PROOF/DRIP-PROOF (HW1485083)</em> version
        <em>188669-1CD, rev 1</em>.
      </li>
    </ul>
    <p>
      All urdfs are based on the default motion and joint velocity limits, 
      unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Eric Marcil</author>
  <maintainer email="eric.marcil@motoman.com">Eric Marcil</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/motoman_hc10_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>motoman_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
