
<package>
 <name>motoman_ma1400_support</name>
 <version>0.3.5</version>
 <description>
  <p>
      ROS Industrial support for the Motoman MA1400 plus MotoMount Positioner.
    </p>
  <p>
      This package contains configuration data, 3D models and launch files
      for Motoman MA1400 robot plus MotoMount Positioner.
    </p>
  <p>
   <b>Specifications</b>
  </p>
  <ul>
   <li>MA1400 - Default</li>
  </ul>
  <p>
      Joint limits and maximum joint velocities are based on the information 
      found in the online 
      https://cdn2.hubspot.net/hubfs/366775/Blog_Robots/MA1440.pdf
      All urdfs are based on the default motion and joint velocity limits, 
      unless noted otherwise.
    </p>
  <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
 </description>
 <author email="gmattklein@gmail.com">Matthew Klein</author>
 <maintainer email="gmattklein@gmail.com">Matthew Klein</maintainer>
 <license>BSD</license>
 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>roslaunch</build_depend>
 <run_depend>motoman_driver</run_depend>
 <run_depend>robot_state_publisher</run_depend>
 <run_depend>rviz</run_depend>
 <run_depend>joint_state_publisher</run_depend>
 <run_depend>phidgets_interface_kit</run_depend>
 <run_depend>i2c_ros</run_depend>
 <export>
  <architecture_independent/>
 </export>
</package>
